# domain-payment

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  deploy_main.yml
domain_payment/: containers_config.py  main.py
domain_payment/adapters/: __factory__.py
domain_payment/adapters/controllers/: __binding__.py  __dependencies__.py  __init__.py  dtos.py  interfaces.py  pix_controller.py
domain_payment/adapters/interface_adapters/: __init__.py  account_adapter.py  admin_adapter.py  payment_adapter.py
domain_payment/adapters/interface_adapters/interfaces/: __init__.py  bucket_provider.py  pix_provider.py  user_provider.py
domain_payment/adapters/interfaces/: __init__.py  authentication_service.py
domain_payment/adapters/repositories/: account_repository.py  exceptions.py  interfaces.py
domain_payment/business/: __factory__.py  interfaces.py  ports.py  services.py
domain_payment/business/use_case/: __init__.py  charge_pix_use_case.py  exceptions.py  interfaces.py
domain_payment/frameworks/: __factory__.py
domain_payment/frameworks/firebase/: manager.py
domain_payment/frameworks/gcp_storage/: __init__.py  manager.py
domain_payment/frameworks/mongodb/: manager.py
domain_payment/frameworks/pix_efi/: __init__.py  manager.py
domain_payment/models/: __init__.py  pix_model.py  user_model.py
domain_payment/types/: object_id.py
infra/: cloudbuild.yaml
infra/app_engine/: dev.yaml  main.yaml
