[tool.poetry]
name = "domain-payment"
version = "0.1.0"
description = ""
authors = ["MrAbade <vini.abade@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
motor = "^3.4.0"
environs = "^11.0.0"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
pydantic = "^2.6.4"
certifi = "^2024.2.2"
firebase-admin = "^6.5.0"
efipay = "^1.0.1"
async-property = "^0.2.2"
gcloud-aio-storage = "^9.3.0"
aiohttp = "^3.9.5"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"
mypy = "^1.9.0"
flake8 = "^7.0.0"
flake8-copyright = "^0.2.4"
pylint = "^3.1.0"
wily = "^1.25.0"
ipython = "^8.23.0"

[tool.isort]
profile = "black"
line_length = "120"
known_first_party = ["commitizen", "tests"]

[tool.black]
line-length = 120

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pylint]
init-hook = "import sys; sys.path.append('./domain_payment'), sys.path.append('./tests')"
fail-under = "10"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = [
    "C0103",
    "C0114",
    "C0116",
    "C0301",
    "C0321",
    "C0115",
    "R0903",
    "W0236",
    "W1203",
    "E0611",
    "R0913",
]

[tool.pylint.similarities]
ignore-imports = "yes"
min-similarity-lines = "15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
